Added Section Under NavBar

--- a/index.html
+++ b/index.html
@@ -7,16 +7,32 @@
     <link rel="stylesheet" href="style.css">
 </head> 
 <body>
-    <header>
-        <nav>
-            <h1>Header Logo</h1>
+    <div class="mainDiv">
+        <header>
+            <nav>
+                <h1>Header Logo</h1>
 
-            <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
-            </ul>
-        </nav>
-    </header>
+                <ul>
+                    <li>header link one</li>
+                    <li>header link two</li>
+                    <li>header link three</li>
+                </ul>
+            </nav>
+        </header>
+
+        <div class="section-under-navbar">
+            <!-- Left Section Under NavBar -->
+            <div>
+                <h1>This Website is Awesome</h1>
+                <p>This Website has subtext that goes here under the main title. Its Smaller Font and the color is lower contrast</p>
+                <button>Sign up</button>
+            </div>
+
+            <!-- Right Section Under Navbar -->
+            <div class="right-section-under-navbar">
+            This is a placeholder for an image
+            </div>
+        </div>
+    </div>
 </body>
 </html>
