End Of Section Under Hero Section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head> 
 <body>
+    <!-- Main Div : NavBar and Hero Section -->
     <div class="mainDiv">
         <header>
             <nav>
@@ -34,5 +35,37 @@
             </div>
         </div>
     </div>
+    <!-- End Of Main Div -->
+
+    <!-- Start Of Section Under Main Div -->
+    <!-- First Part -->
+    <br>
+    <br>
+    <div>
+        <h1 style="text-align: center;">Some Random Information</h1>
+    </div>
+    <br>
+    <br>
+    
+    <!-- Second Part -->
+    <div class="sp-maindiv">
+        <div class="sp-seconddiv">
+            <div class="box-sp"></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="sp-seconddiv">
+            <div class="box-sp"></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="sp-seconddiv">
+            <div class="box-sp"></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="sp-seconddiv">
+            <div class="box-sp"></div>
+            <p>this is some subtext under an illustration or image</p>
+        </div>
+    </div>
+    <!-- End Of Second Part -->
 </body>
 </html>
