--- a/index.html
+++ b/index.html
@@ -67,5 +67,21 @@
         </div>
     </div>
     <!-- End Of Second Part -->
+
+    <br>
+    <br>
+    <!-- Start Of Quote Section -->
+    <div class="quote-section">
+        <p>This is an inspiring quote, or a testimonal from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who Knows? All I Know is that it looks nice</p>
+        <p>-Thor, God Of Thunder</p>
+    </div>
+    <!-- End Of Quote Section -->
+    <br>
+    <br>
+
+    <!-- Call-To-Action Section -->
+    <div>
+        
+    </div>
 </body>
 </html>
