--- a/index.html
+++ b/index.html
@@ -80,8 +80,19 @@
     <br>
 
     <!-- Call-To-Action Section -->
-    <div>
-        
+    <div class="action-maindiv">
+        <div class="action-seconddiv">
+            <div>Call to Action!Its Time</div>
+            <button>Sign Up</button>
+        </div>
     </div>
+    <!-- End of Call-to-Action Section -->
+
+    <br>
+    <br>
+    <!-- Footer -->
+    <footer>
+        <p>Copyright &copy; 2025 My Website. All rights reserved.</p>
+    </footer> 
 </body>
 </html>
